fixed question display text alignment on html

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ p {
     border: 2px solid #3d0066;
     border-radius: 5px;
     position:relative;
-    left:-15%;
+    left:-10%;
 }
 
 #Goback {
